--- a/Web Game Test/test.html
+++ b/Web Game Test/test.html
@@ -2,12 +2,12 @@
 <html lang="de" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Cool Web Page</title>
+    <title>Game</title>
   </head>
   <h1>
-    Hello World!
+    Here could be your game
     </h1>
   <body>
-    Lorem Ipsum
+    And a add
   </body>
 </html>
