Start of VoidSpace

--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <title>VoidSpace</title>
+        <link rel="stylesheet" href="mystyle.css">
     </head>
     <body>
-        <h1>Hello World</h1>
-        <p>Lorem Ipsum</p>
+        <h1 class="header">VoidSpace</h1>
+        <p>Welcome to VoidSpace</p>
+        <br>
+        <h2>Projects</h2>
+        <p href="/schuelerportal2.html">Schülerportal 2.0</p>
     </body>
 </html>
