--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>VoidSpace</title>
-        <link rel="stylesheet" href="mystyle.css">
+        <title>voidspace</title>
+        <link rel="stylesheet" href="design.css">
     </head>
     <body>
-        <h1 class="header">VoidSpace</h1>
-        <p>Welcome to VoidSpace</p>
-        <br>
-        <h2>Projects</h2>
-        <p href="/schuelerportal2.html">Schülerportal 2.0</p>
+        <h1 class="header">voidspace</h1>
+        <div class="text">
+            <!--p class="text">Welcome to VoidSpace</p!-->
+            <br>
+            <h2>Projects</h2>
+            <a class="link" href="/schuelerportal2.html">Schülerportal 2.0</a>
+        </div>
     </body>
 </html>
