--- a/schuelerportal2.html
+++ b/schuelerportal2.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        Schülerportal 2.0
+        <title>Schülerportal 2.0</title>
+        <link rel="stylesheet" href="design.css">
     </head>
     <body>
         <h1 class="header">Schülerportal 2.0</h1>
-        <p>Wilkommen im Schülerportal 2.0</p>
-        <br>
+        <div class="text">
+            <p>Wilkommen im Schülerportal 2.0</p>
+            <br>
+            <h2>Vertretungsplan</h2>
+        </div>
+        <div id="Vertetungsplan">
+            <iframe src="/schuelerportal/vertretungsplan.html" frameborder="0"></iframe>
+        </div>
     </body>
 </html>
