--- a/schuelerportal/vertretungsplan.html
+++ b/schuelerportal/vertretungsplan.html
@@ -5,11 +5,12 @@
     <link rel="stylesheet" href="../design.css">
     <script src="vertretungsplan.js"></script> 
 </head>
-<body onload="start()">
+<body >
+    <h1>IT DOESN'T WORK :c</h1>
     <div class="text">
         <label for="session-cookie">Session Cookie</label>
         <input type="password" name="session-cookie" id="cookie">
-        <button type="button" onclick="reload()">reload</button>
+        <button type="button" >reload</button>
     </div>
 </body>
 </html>
