--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <br>
             <h2>Projects</h2>
             <a class="link" href="/schuelerportal2.html">Schülerportal 2.0</a>
+            <a class="link" href="/discordWebhook.html">Send Discord Messages</a>
         </div>
     </body>
 </html>
