--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
             <!--p class="text">Welcome to VoidSpace</p!-->
             <br>
             <h2>Projects</h2>
-            <a class="link" href="/schuelerportal2.html">Schülerportal 2.0</a>
-            <a class="link" href="/discordWebhook.html">Send Discord Messages</a>
+            <p><a class="link" href="/schuelerportal2.html">Schülerportal 2.0</a></p>
+            <p><a class="link" href="/discordWebhook.html">Send Discord Messages</a></divp>
         </div>
     </body>
 </html>
